Add instructions for cell 3.

--- a/Distance_AF_embedding.ipynb
+++ b/Distance_AF_embedding.ipynb
@@ -59,41 +59,12 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 49,
-          "referenced_widgets": [
-            "95ff58c49fa4480399e196de367dd52c",
-            "4ea65a96055748e2b4af8a66bcadd504",
-            "d794c2938bb1437f94233e97a56b5b8c",
-            "a0e70c3d1e8b4553861ba4008b5b8ab2",
-            "b8202012ceb14ef3aa3077341557e2c2",
-            "305c2037d74e4637a34130a4518882e5",
-            "61e0d7d7c77d468a9fbe4bf91bdbbaf8",
-            "7111f118745d4c57b94a2eef5ffc9e18",
-            "a9ec760e930844e7813ad0cb55f02c60",
-            "b37f9ab0a8f14b6f9e8d36287121976b",
-            "0cf33ec5b6f04a239a136c65573b5b60"
-          ]
+          "background_save": true
         },
         "id": "mWfiTxKF4O4U",
-        "outputId": "5638485a-39ae-4da0-e0ce-1711eb4cc770"
+        "cellView": "form"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "95ff58c49fa4480399e196de367dd52c",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "  0%|          | 0/100 [elapsed: 00:00 remaining: ?]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Set environment variables before running any other code.\n",
         "import os\n",
@@ -165,7 +136,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "_m9REtyN4bs0"
+        "colab": {
+          "background_save": true
+        },
+        "id": "_m9REtyN4bs0",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -243,15 +218,24 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SrIg6g5x5eeS"
+        "colab": {
+          "background_save": true
+        },
+        "id": "SrIg6g5x5eeS",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
         "#@title 3. Enter the amino acid sequence(s) to fold ⬇️\n",
+        "\n",
+        "#@markdown Enter the custom job_name, which is also the download zip file name.\n",
+        "\n",
         "#@markdown Enter the amino acid sequence(s) to fold:\n",
         "#@markdown * If you enter only a single sequence, the monomer model will be\n",
         "#@markdown used (unless you override this below).\n",
         "#@markdown * If you enter multiple sequences, the multimer model will be used.\n",
+        "\n",
+        "#@markdown Current version of Distance-AF only supports monomer target.\n",
         "\n",
         "from alphafold.notebooks import notebook_utils\n",
         "# Track cell execution to ensure correct order.\n",
@@ -355,7 +339,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "stST8Snqu011"
+        "id": "stST8Snqu011",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -575,7 +560,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "i8sC9oL96EIe"
+        "id": "i8sC9oL96EIe",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -707,7 +693,7 @@
     "colab": {
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyNFHzEv0yDhr13vqdFN2/rE",
+      "authorship_tag": "ABX9TyM4RvdSTWqdC8OCqEWPXfbb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -716,352 +702,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "95ff58c49fa4480399e196de367dd52c": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_4ea65a96055748e2b4af8a66bcadd504",
-              "IPY_MODEL_d794c2938bb1437f94233e97a56b5b8c",
-              "IPY_MODEL_a0e70c3d1e8b4553861ba4008b5b8ab2"
-            ],
-            "layout": "IPY_MODEL_b8202012ceb14ef3aa3077341557e2c2"
-          }
-        },
-        "4ea65a96055748e2b4af8a66bcadd504": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_305c2037d74e4637a34130a4518882e5",
-            "placeholder": "​",
-            "style": "IPY_MODEL_61e0d7d7c77d468a9fbe4bf91bdbbaf8",
-            "value": "  0%"
-          }
-        },
-        "d794c2938bb1437f94233e97a56b5b8c": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatProgressModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "FloatProgressModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "ProgressView",
-            "bar_style": "",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_7111f118745d4c57b94a2eef5ffc9e18",
-            "max": 100,
-            "min": 0,
-            "orientation": "horizontal",
-            "style": "IPY_MODEL_a9ec760e930844e7813ad0cb55f02c60",
-            "value": 0
-          }
-        },
-        "a0e70c3d1e8b4553861ba4008b5b8ab2": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_b37f9ab0a8f14b6f9e8d36287121976b",
-            "placeholder": "​",
-            "style": "IPY_MODEL_0cf33ec5b6f04a239a136c65573b5b60",
-            "value": " 0/100 [elapsed: 00:00 remaining: ?]"
-          }
-        },
-        "b8202012ceb14ef3aa3077341557e2c2": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "305c2037d74e4637a34130a4518882e5": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "61e0d7d7c77d468a9fbe4bf91bdbbaf8": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        },
-        "7111f118745d4c57b94a2eef5ffc9e18": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "a9ec760e930844e7813ad0cb55f02c60": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ProgressStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "ProgressStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "bar_color": null,
-            "description_width": ""
-          }
-        },
-        "b37f9ab0a8f14b6f9e8d36287121976b": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "0cf33ec5b6f04a239a136c65573b5b60": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        }
-      }
     }
   },
   "nbformat": 4,
