Adding save_to_google_drive option

--- a/Distance_AF_embedding_v2.ipynb
+++ b/Distance_AF_embedding_v2.ipynb
@@ -74,7 +74,7 @@
         "def add_hash(x,y):\n",
         "  return x+\"_\"+hashlib.sha1(y.encode()).hexdigest()[:5]\n",
         "\n",
-        "query_sequence = 'MEFRQLKYFIAVAEAGNMAAAAKRLHVSQPPITRQMQALEADLGVVLLERSHRGIELTAAGHAFLEDARRILELAGRSGDRSRAAARGDVGELSVAYFGTPIYRSLPLLLRAFLTSTPTATVSLTHMTKDEQVEGLLAGTIHVGFSRFFPRHPGIEIVNIAQEDLYLAVHRSQSGKFGKTCKLADLRAVELTLFPRGGRPSFADEVIGLFKHAGIEPRIARVVEDATAALALTMAGAASSIVPASVAAIRWPDIAFARIVGTRVKVPISCIFRKEKQPPILARFVEHVRRSAKD' #@param {type:\"string\"}\n",
+        "query_sequence = 'MEFRQLKYFIAVAEAGNMAAAAKRLHVSQPPITRQMQAL' #@param {type:\"string\"}\n",
         "#@markdown  - Use `:` to specify inter-protein chainbreaks for **modeling complexes** (supports homo- and hetro-oligomers). For example **PI...SK:PI...SK** for a homodimer\n",
         "jobname = '1IXC_A' #@param {type:\"string\"}\n",
         "# number of models to use\n",
@@ -180,8 +180,7 @@
         "    print(\"installing amber...\")\n",
         "    os.system(f\"mamba install -y -c conda-forge openmm=7.7.0 python='{PYTHON_VERSION}' pdbfixer\")\n",
         "    os.system(\"touch AMBER_READY\")\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -413,16 +412,15 @@
         "\n",
         "files.download(f\"{jobname}.result.zip\")\n",
         "\n",
-        "# if save_to_google_drive == True and drive:\n",
-        "#   uploaded = drive.CreateFile({'title': f\"{jobname}.result.zip\"})\n",
-        "#   uploaded.SetContentFile(f\"{jobname}.result.zip\")\n",
-        "#   uploaded.Upload()\n",
-        "#   print(f\"Uploaded {jobname}.result.zip to Google Drive with ID {uploaded.get('id')}\")"
+        "if save_to_google_drive == True and drive:\n",
+        "  uploaded = drive.CreateFile({'title': f\"{jobname}.result.zip\"})\n",
+        "  uploaded.SetContentFile(f\"{jobname}.result.zip\")\n",
+        "  uploaded.Upload()\n",
+        "  print(f\"Uploaded {jobname}.result.zip to Google Drive with ID {uploaded.get('id')}\")"
       ],
       "metadata": {
         "id": "mbaIO9pWjaN0",
-        "collapsed": true,
-        "cellView": "form"
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": []
