Update using Colaboratory

--- a/Distance_AF_embedding_v2.ipynb
+++ b/Distance_AF_embedding_v2.ipynb
@@ -409,14 +409,13 @@
         "os.system(f\"zip -r {results_zip} {jobname}\")\n",
         "# if msa_mode == \"custom\":\n",
         "#   print(\"Don't forget to cite your custom MSA generation method.\")\n",
-        "\n",
-        "files.download(f\"{jobname}.result.zip\")\n",
-        "\n",
         "if save_to_google_drive == True and drive:\n",
         "  uploaded = drive.CreateFile({'title': f\"{jobname}.result.zip\"})\n",
         "  uploaded.SetContentFile(f\"{jobname}.result.zip\")\n",
         "  uploaded.Upload()\n",
-        "  print(f\"Uploaded {jobname}.result.zip to Google Drive with ID {uploaded.get('id')}\")"
+        "  print(f\"Uploaded {jobname}.result.zip to Google Drive with ID {uploaded.get('id')}\")\n",
+        "files.download(f\"{jobname}.result.zip\")\n",
+        "\n"
       ],
       "metadata": {
         "id": "mbaIO9pWjaN0",
