add support to multimer

--- a/Distance_AF_embedding_FullMSA.ipynb
+++ b/Distance_AF_embedding_FullMSA.ipynb
@@ -28,7 +28,7 @@
       "source": [
         "# Instructions <a name=\"Instructions\"></a>\n",
         "**Quick start**\n",
-        "1. Paste your protein sequence in the input field, current Distance-AF version only supports single chain.\n",
+        "1. Paste your protein sequence in the input field, current Distance-AF version support single chain and multiple chains. For multimer, please fill out sequence from each chain into corresponding field.\n",
         "2. Press \"Runtime\" -> \"Run all\".\n",
         "3. The pipeline consists of 5 steps. The currently running step is indicated by a circle with a stop sign next to it.\n",
         "4. If you have trouble with connecting GPU, you can simply click the Runtime and scroll down to click 'change runtime type', at the section of 'Hardware accelerator', you can choose the avaliable GPU provided, finally click save.\n",
@@ -133,7 +133,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "_m9REtyN4bs0"
+        "id": "_m9REtyN4bs0",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -212,8 +213,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SrIg6g5x5eeS",
-        "cellView": "form"
+        "id": "SrIg6g5x5eeS"
       },
       "outputs": [],
       "source": [
@@ -238,9 +238,9 @@
         "class ModelType(enum.Enum):\n",
         "  MONOMER = 0\n",
         "  MULTIMER = 1\n",
-        "job_name = 'test_1IXC_A'   #@param {type:\"string\"}\n",
+        "job_name = 'test_1IXC_multimer'   #@param {type:\"string\"}\n",
         "sequence_1 = 'MEFRQLKYFIAVAEAGNMAAAAKRLHVSQPPITRQMQALEADLGVVLLERSHRGIELTAAGHAFLEDARRILELAGRSGDRSRAAARGDVGELSVAYFGTPIYRSLPLLLRAFLTSTPTATVSLTHMTKDEQVEGLLAGTIHVGFSRFFPRHPGIEIVNIAQEDLYLAVHRSQSGKFGKTCKLADLRAVELTLFPRGGRPSFADEVIGLFKHAGIEPRIARVVEDATAALALTMAGAASSIVPASVAAIRWPDIAFARIVGTRVKVPISCIFRKEKQPPILARFVEHVRRSAKD'  #@param {type:\"string\"}\n",
-        "sequence_2 = ''  #@param {type:\"string\"}\n",
+        "sequence_2 = 'MEFRQLKYFIAVAEAGNMAAAAKRLHVSQPPITRQMQALEADLGVVLLERSHRGIELTAAGHAFLEDARRILELAGRSGDRSRAAARGDVGELSVAYFGTPIYRSLPLLLRAFLTSTPTATVSLTHMTKDEQVEGLLAGTIHVGFSRFFPRHPGIEIVNIAQEDLYLAVHRSQSGKFGKTCKLADLRAVELTLFPRGGRPSFADEVIGLFKHAGIEPRIARVVEDATAALALTMAGAASSIVPASVAAIRWPDIAFARIVGTRVKVPISCIFRKEKQPPILARFVEHVRRSAKD'  #@param {type:\"string\"}\n",
         "sequence_3 = ''  #@param {type:\"string\"}\n",
         "sequence_4 = ''  #@param {type:\"string\"}\n",
         "sequence_5 = ''  #@param {type:\"string\"}\n",
@@ -330,7 +330,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "stST8Snqu011"
+        "id": "stST8Snqu011",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -682,7 +683,8 @@
     "colab": {
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyMhX8d6fSGzIjy7jdV/fFWr",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOd1BImseOv4IlE9zI7HNia",
       "include_colab_link": true
     },
     "kernelspec": {
